# Snippet-Hub

./: .gitignore  README.md  TODO.md  compose.yaml
Backend/: Backend_summary.md  alembic.ini  package-lock.json  package.json  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: bd6db0ae08e0_init.py  d78425bd6208_add_tags.py
Backend/src/: main.py
Backend/src/core/: config.py  db.py  dependencies.py
Backend/src/icons/: router.py  service.py
Backend/src/ollama/: router.py  schemas.py
Backend/src/snippets/: enums.py  model.py  repository.py  router.py  schemas.py
Backend/src/tags/: model.py  repository.py  router.py  schemas.py
Backend/src/technology/: model.py  repository.py  router.py  schemas.py
Frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.vue
Frontend/src/components/: TechCard.vue
Frontend/src/components/builder/: IconSelector.vue
Frontend/src/components/snippets/: ModalCreateSnippet.vue  PrimeIcon.vue  SnippetsGrid.vue
Frontend/src/components/technology/: TechnologyAboutModal.vue  TechnologyHeader.vue
Frontend/src/components/ui/: Footer.vue  Header.vue  Sidebar.vue
Frontend/src/layouts/: DefaultLayout.vue
Frontend/src/router/: index.ts
Frontend/src/stores/: snippets.ts  tags.ts  technology.ts
Frontend/src/types/: snippet.ts  tag.ts  technology.ts
Frontend/src/views/: BuilderView.vue  ChatView.vue  CreateTagView.vue  CreateTechView.vue  HomeView.vue  TechnologyView.vue
Runners/: Backend.sh  Frontend.sh  alembic.md
(+4 files in other folders)
